# SimpleTranslator

./: .gitignore  CMakeLists.txt  README.md
res/: resources.qrc
src/: main.cpp
src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
